Fix for navbar glyphicon flicker on Chromium

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -18,3 +18,7 @@ h2 {
 .navbar-default .navbar-brand {
     color: #fff;
 }
+
+.navbar-default .glyphicon {
+    width: 20px;
+}
